# z

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  compile_commands.json  meson.build  meson_native.ini  refresh_3rdparty.sh  refresh_meson.sh
fged/: fged.h  main.c  mat3.c  mat4.c  vec3.c  vec4.c
vkg/: 3rdparty.cpp  camera.c  main.c  materials.c  vk_descriptors.c  vk_engine.c  vk_images.c  vk_initializers.c  vk_loader.c  vk_pipelines.c  vk_scenenode.c
vkg/shaders/: colored_triangle.frag  gradient_color.comp  mesh.incl.glsl  mesh.vert
vkguide/: 3rdparty.cpp  camera.c  main.c  materials.c  vk_descriptors.c  vk_engine.c  vk_images.c  vk_initializers.c  vk_loader.c  vk_pipelines.c  vk_scenenode.c  vkguide.h
vkguide/shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  mesh.frag  mesh.vert  sky.comp  tex_image.frag
zdeps/: impls.c  impls.cpp  zdeps.h
